@@ -2217,14 +2217,15 @@ PROP_SOUNDER=\
 Property   : Prop_Sounder\n\r\
 Targets    : Areas, Room, Item, Mobs, Exits\n\r\
 Targets    : Room, MOBs, Items, Areas\n\r\
-Parameters :([EMOTE TRIGGER] [EMOTE STRING];) \n\r\
-Example    : enter wiggles his bottom.;sleep smiles evilly.;mount burps!\n\r\
+Parameters :([EMOTE TRIGGER] [EMOTE STRING] (MASK=[ZAPPERMASK]);) \n\r\
+Example    : enter wiggles his bottom.;sleep smiles evilly. MASK=-NAME +Bob;\n\r\
 Example    : wear $p looks good on you.;remove Now you don't look so good.;remove_room $n doesn't look so good.\n\r\
 \n\r\
 A lightweight alternative to the Emoter and Sounder behaviors, this allows you to create very simple \
 emoting triggers based on event triggers instead of pro-active tick triggers, \
 such as getting an item, or leaving a room.  Each emote trigger is semicolon (;) \
-separated.  Valid emote triggers include the following:\n\r\
+separated.  A MASK= near the end will filter the cause of the trigger. \
+Valid emote triggers include the following:\n\r\
 GET - if an item is gotten (or THE item), this will emote to the getter.\n\r\
 GET_ROOM - if an item is gotten (or THE item), this will emote to the room (not the getter).\n\r\
 DROP - if an item is dropped (or THE item), this will emote to the getter.\n\r\
@@ -2565,13 +2566,16 @@ drinkable filled.  All emote strings are separated \
 by the semicolons shown above.  The first parameter can be empty for defaults,\
 the percent chance of occurrence after the event occurs, \
 a list of rooms where the emoter MUST be for the emoter to work (inroom=...), \
+a mask="..." zapper mask to filter who can trigger the emoter, \
 a tag to make the emote sound based (sound), a tag to make the \
 emote smell based (smell), a tag to make the emote broadcast to adjacent \
 rooms (broadcast), or a tag to make the message private to the actor (private).\n\r\
 You can also mix and match the types of emotes by putting the keywords SIGHT, \
 SMELL, NOISE, and SOCIAL as the first word in each emote string.  This denotes \
 the type of emote for the rest of the string.  The last example shows how to \
-enter a mixed emote.
+enter a mixed emote.\n\r\
+If an emote begins with MASK= then the remaining is a zappermask for the mob \
+who is causing the emote.
 
 PROP_USEEMOTER2=\
 Property   : Prop_UseEmoter2\n\r\
@@ -2585,13 +2589,14 @@ an item is used, such as item gotten, food ate or drank, or liquid poured. \
 by the semicolons shown above.  The first parameter can be empty for defaults,\
 the percent chance of occurrence after the event occurs, \
 a list of rooms where the emoter MUST be for the emoter to work (inroom=...), \
+a mask="..." zapper mask to filter who can trigger the emoter, \
 a tag to make the emote sound based (sound), a tag to make the \
 emote smell based (smell), a tag to make the emote broadcast to adjacent \
 rooms (broadcast), or a tag to make the message private to the actor (private). \n\r\
 You can also mix and match the types of emotes by putting the keywords SIGHT, \
 SMELL, NOISE, and SOCIAL as the first word in each emote string.  This denotes \
 the type of emote for the rest of the string.  The last example shows how to \
-enter a mixed emote.
+enter a mixed emote.  
 
 PROP_USESPELLCAST=\
 Property   : Prop_UseSpellCast\n\r\
