@@ -49,7 +49,8 @@
  48. ACHIEVEMENTS command now always supporting including awards in lists.
  49. Channels now support SEARCH:
  50. Subscribe now supports channels and their backlogs
- 51. Titles now support random selection lists. 
+ 51. Titles now support random selection lists.
+ 52. Prop_UseEmoter* and Prop_Sounder support trigger mob masks now. 
 
 # Build 5.10.2 Release 4/28/2023
   *  DATABASE CHANGED! (Enlarged CMDATE, and new expiration date added to CMJRNL table)
